--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ Flask==2.2.3
 Flask-Login==0.6.2
 fqdn==1.5.1
 furl==2.1.3
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.0.0
 ipykernel==6.21.3
