--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ attrs==22.2.0
 backcall==0.2.0
 beautifulsoup4==4.11.2
 bleach==6.0.0
+cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
@@ -26,6 +27,13 @@ Flask==2.2.3
 Flask-Login==0.6.2
 fqdn==1.5.1
 furl==2.1.3
+google-api-core==2.11.0
+google-auth==2.17.3
+google-cloud-core==2.3.2
+google-cloud-storage==2.8.0
+google-crc32c==1.5.0
+google-resumable-media==2.4.1
+googleapis-common-protos==1.59.0
 gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.0.0
@@ -69,9 +77,12 @@ pickleshare==0.7.5
 platformdirs==3.0.0
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
+protobuf==4.22.3
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 Pygments==2.14.0
 pymongo==4.3.3
@@ -96,6 +107,7 @@ redis==4.5.4
 requests==2.28.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rsa==4.9
 scipy==1.10.1
 Send2Trash==1.8.0
 six==1.16.0
